@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-10T00:58:23Z",
+  "timestamp" : "2023-11-10T08:16:05Z",
   "count_outdated" : 3257,
   "uniques_outdated" : 1355,
-  "count" : 3286,
-  "uniques" : 1371,
+  "count" : 3287,
+  "uniques" : 1372,
   "clones" : [
     {
       "timestamp": "2023-10-27T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
